# agentic-alert-system

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: daily_pipeline.yml
configs/: app.yaml
data/: alert_candidates.csv  alerts.csv  alerts_backtest.csv  articles.csv  companies.csv  contact_owners.csv  gn_rotation_state.json  providers.csv  triggers.csv
data/backtest_snapshots/: sample_gdelt.json
data/rss_snapshots/: sample.xml
data/templates/: companies.template.csv  contact_owners.template.csv  providers.template.csv  triggers.template.csv
docs/: 00_overview.md  01_mvp_scope.md  02_data_model.md  03_pipeline.md  10_commands.md  20_real_data_setup.md  21_provider_coverage.md  30_scheduler_local.md  40_actions_e2e_validation.md  40_backtesting.md  codex_toolkit.md  n8n_control_plane.md
n8n-control-plane/: .env.example  .gitignore  README.md  docker-compose.yml
n8n/workflows/: dispatch_daily_pipeline.json  dispatch_daily_pipeline_with_run_link.json
scripts/: debug_gn_head.sh  import_orbis_xlsx.py  print_cron_entry.sh  run_daily.sh  run_daily_local.sh
scripts/codex/: update_agents_from_sessions.py
scripts/launchd/: com.agentic-alert.daily.plist  com.agentic-alert.daily.plist.template  install_launchd.sh
src/agentic_alert/: __init__.py  __main__.py  config.py  pipeline.py
src/agentic_alert_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/integration/: README.md  test_pipeline_generates_alerts_no_dupes.py
tests/unit/: README.md  test_backtest_pipeline.py  (+7 more)
(+5 files in other folders)
